# LilyChorus

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
src/: LabeledSlider.h  Lfo.h  LookAndFeel.h  LushChorus.cpp  LushChorus.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
